--- a/src/main/webapp/mobile/main/main4.html
+++ b/src/main/webapp/mobile/main/main4.html
@@ -174,6 +174,7 @@
 	function getReady(id) {
 
 		locationName = $.trim(id.innerText);
+		console.info(locationName);
 		if (locationName == "开始入学导航") {
 			//得到开始入学导航的导航步骤
 			ajaxUtil.getStep();
@@ -188,610 +189,14 @@
 
 	}
 
-	//var host = document.location.toString().match(/file:\/\//) ? "http://localhost:8090" : 'http://' + document.location.host;
-	var host = "http://localhost:8090";
-	var local, map, layer, vectorLayer, markerLayer, geolocate, drawPoint, select, marker, nodeArray = [], pathTime, i = 0, j = 0, sesul, style = {
-		strokeColor : "#304DBE",
-		strokeWidth : 3,
-		pointerEvents : "visiblePainted",
-		fill : false
-	}, styleGuidePoint = {
-		pointRadius : 10,
-		externalGraphic : "images/walk.png"
-	}, styleGuideLine = {
-		strokeColor : "#25FF25",
-		strokeWidth : 6,
-		fill : false
-	}, url1 = host + "/iserver/services/map-changchun/rest/maps/长春市区图", url2 = host
-			+ "/iserver/services/transportationanalyst-sample/rest/networkanalyst/RoadNet@Changchun";
+
 	//加载地图
 	function init() {
-		vectorLayer = new SuperMap.Layer.Vector("Vector Layer");
-
-		drawPoint = new SuperMap.Control.DrawFeature(vectorLayer,
-				SuperMap.Handler.Point);
-
-		select = new SuperMap.Control.SelectFeature(vectorLayer, {
-			onSelect : onFeatureSelect,
-			onUnselect : onFeatureUnselect
-		});
-
-		drawPoint.events.on({
-			"featureadded" : drawCompleted
-		});
-		map = new SuperMap.Map("map", {
-			controls : [ new SuperMap.Control.LayerSwitcher(),
-					new SuperMap.Control.Zoom(),
-					new SuperMap.Control.Navigation({
-						dragPanOptions : {
-							enableKinetic : true
-						}
-					}), drawPoint, select ],
-			units : "m"
-		});
-
-		//添加geo定位控件
-		//地理定位控件包装了w3c 的geolocation 接口，与map结合使用；在位置改变时可以响应事件。
-		//通过 activate 和 deactivate 两个方法，实现动态的激活和注销。
-		geolocate = new SuperMap.Control.Geolocate({
-			bind : false,
-			geolocationOptions : {
-				//指示浏览器获取高精度的位置，默认为false
-				enableHighAccuracy : false,
-				maximumAge : 0
-			},
-			eventListeners : {
-				//locationupdated 当浏览器返回新的位置时触发。
-				//locationfailed 当地理定位失败时触发。
-				//locationuncapable 当前浏览器不支持地理定位时触发。
-				"locationupdated" : getGeolocationCompleted,
-				"locationfailed" : getGeolocationFailed
-			}
-		});
-		//激活控件
-		map.addControl(geolocate);
-
-		layer = new SuperMap.Layer.TiledDynamicRESTLayer("Changchun", url1, {
-			transparent : true,
-			cacheEnabled : true
-		}, {
-			maxResolution : "auto"
-		});
-		layer.events.on({
-			"layerInitialized" : addLayer
-		});
-		markerLayer = new SuperMap.Layer.Markers("Markers");
-	}
-
-	function addLayer() {
-		map.addLayers([ layer, vectorLayer, markerLayer ]);
-		map.setCenter(new SuperMap.LonLat(4503.6240321526, -3861.911472192499),
-				1);
-		geoLocation();
-	}
-
-	//响应选择站点按钮点击事件
-	function selectPoints() {
-		clearElements();
-		drawPoint.activate();
-	}
-
-	//当添加要素时会触发此事件
-	function drawCompleted(drawGeometryArgs) {
-		var point = drawGeometryArgs.feature.geometry, size = new SuperMap.Size(
-				44, 33), offset = new SuperMap.Pixel(-(size.w / 2), -size.h), icon = new SuperMap.Icon(
-				"../theme/images/marker.png", size, offset);
-		markerLayer.addMarker(new SuperMap.Marker(new SuperMap.LonLat(point.x,
-				point.y), icon));
-		nodeArray.push(point);
-	}
-
-	//选中时显示路径指引信息
-	function onFeatureSelect(feature) {
-		if (feature.attributes.description) {
-			popup = new SuperMap.Popup("chicken", feature.geometry.getBounds()
-					.getCenterLonLat(), new SuperMap.Size(200, 30),
-					"<div style='font-size:.8em; opacity: 0.8'>"
-							+ feature.attributes.description + "</div>", null,
-					false);
-			feature.popup = popup;
-			map.addPopup(popup);
-		}
-		if (feature.geometry.CLASS_NAME != "SuperMap.Geometry.Point") {
-			feature.style = styleGuideLine;
-			vectorLayer.redraw();
-		}
-	}
-
-	//清除要素时调用此函数
-	function onFeatureUnselect(feature) {
-		map.removePopup(feature.popup);
-		feature.popup.destroy();
-		feature.popup = null;
-		if (feature.geometry.CLASS_NAME != "SuperMap.Geometry.Point") {
-			feature.style = style;
-		}
-		vectorLayer.redraw();
 
 	}
 
-	//响应提交按钮点击事件
-	function findPath() {
-		drawPoint.deactivate();
-		var findPathService, parameter, analystParameter, resultSetting;
-		resultSetting = new SuperMap.REST.TransportationAnalystResultSetting({
-			returnEdgeFeatures : true,
-			returnEdgeGeometry : true,
-			returnEdgeIDs : true,
-			returnNodeFeatures : true,
-			returnNodeGeometry : true,
-			returnNodeIDs : true,
-			returnPathGuides : true,
-			returnRoutes : true
-		});
-		analystParameter = new SuperMap.REST.TransportationAnalystParameter({
-			resultSetting : resultSetting,
-			weightFieldName : "length"
-		});
-		parameter = new SuperMap.REST.FindPathParameters({
-			isAnalyzeById : false,
-			nodes : nodeArray,
-			hasLeastEdgeCount : false,
-			parameter : analystParameter
-		});
-		if (nodeArray.length <= 1) {
-			alert("站点数目有误");
-		}
-		findPathService = new SuperMap.REST.FindPathService(url2, {
-			eventListeners : {
-				"processCompleted" : processCompleted
-			}
-		});
-		findPathService.processAsync(parameter);
-	}
 
-	//服务端成功返回最佳路径分析结果时触发事件
-	function processCompleted(findPathEventArgs) {
-		var result = findPathEventArgs.result;
-		allScheme(result);
-	}
-	function allScheme(result) {
-		if (i < result.pathList.length) {
-			addPath(result);
-		} else {
-			i = 0;
-			addPathGuideItems(result);
 
-		}
-	}
-
-	////以动画效果显示分析结果
-	function addPath(result) {
-		if (j < result.pathList[i].route.components.length) {
-			var pathFeature = new SuperMap.Feature.Vector();
-			var points = [];
-			for (var k = 0; k < 2; k++) {
-				if (result.pathList[i].route.components[j + k]) {
-					points.push(new SuperMap.Geometry.Point(
-							result.pathList[i].route.components[j + k].x,
-							result.pathList[i].route.components[j + k].y));
-				}
-			}
-			var curLine = new SuperMap.Geometry.LinearRing(points);
-			pathFeature.geometry = curLine;
-			pathFeature.style = style;
-			vectorLayer.addFeatures(pathFeature);
-			pathTime = setTimeout(function() {
-				addPath(result);
-			}, 0.001);
-			j++;
-		} else {
-			clearTimeout(pathTime);
-			j = 0;
-			i++;
-			allScheme(result);
-		}
-	}
-
-	//线绘制完成后会绘制关于路径指引点的信息
-	function addPathGuideItems(result) {
-		resul = result;
-		vectorLayer.removeAllFeatures();
-		for (var k = 0; k < result.pathList.length; k++) {
-			var pathGuideItems = result.pathList[i].pathGuideItems, len = pathGuideItems.length;
-			for (var m = 0; m < len; m++) {
-				var guideFeature = new SuperMap.Feature.Vector();
-				guideFeature.geometry = pathGuideItems[m].geometry;
-				guideFeature.attributes = {
-					description : pathGuideItems[m].description
-				};
-				if (guideFeature.geometry.CLASS_NAME === "SuperMap.Geometry.Point") {
-					guideFeature.style = styleGuidePoint;
-				} else {
-					guideFeature.style = style;
-				}
-				vectorLayer.addFeatures(guideFeature);
-			}
-
-			select.activate();
-
-		}
-	}
-	//清楚要素
-	function clearElements() {
-		n = 0;
-		i = 0;
-		j = 0;
-		nodeArray = [];
-		select.deactivate();
-		if (vectorLayer.selectedFeatures.length > 0) {
-			map.removePopup(vectorLayer.selectedFeatures[0].popup);
-		}
-		vectorLayer.removeAllFeatures();
-		markerLayer.clearMarkers();
-	}
-
-	//function walking_route() {
-	//    var pathGuideItems = resul.pathList[0].pathGuideItems;
-	//    var path
-	//    var steps = [];
-	//    route_text = "";
-	//    for (var v = 0; v < pathGuideItems.length; v++) {
-	//        if (v % 2 == 0 && v != 0) {
-	//            var instruction = pathGuideItems[v - 1].description + pathGuideItems[v].description;
-	//            steps.push(instruction);
-	//        }
-	//    }
-	//    for (var i = 0 ; i < steps.length; i++) {
-	//        route_text += "<tr><td >" + i + "." + steps[i] + "</td></tr>";
-	//    }
-	//    route_text = "<table cellspacing=\"5 px\" >" + route_text + "</table>";
-	//    document.getElementById("result").innerHTML = route_text;
-
-	//}
-
-	function geoLocation() {
-		if (!geolocate.active) {
-			geolocate.activate();
-		}
-		geolocate.getCurrentLocation();
-		//没网络，定位不成功，直接执行，若有网络，定位成功则触发getGeolocationCompleted事件
-		//getGeolocationCompleted();
-	}
-
-	var j = 0;
-	//更新定位
-	function getGeolocationCompleted(event) {
-		var isDingWeiDian = false;
-		if (isStart == 0) {
-			drawpoint(2599.3728359303, -3700.8742721205, "qidian.png",
-					isDingWeiDian);
-			drawpoint(xloc, yloc, "zhongdian.png", isDingWeiDian);
-			isStart++;
-			findPath();
-			geolocate.deactivate();
-			TimeO = setTimeout("geoLocation()", 10000);
-			return;
-		}
-		if (isStart < 4) {
-			isStart++;
-			return;
-		}
-		//var lonLat = new SuperMap.LonLat(event.point.x, event.point.y);
-		event.point.x = 2607.8522400652;
-		event.point.y = -3682.5745902937;
-
-		//1
-		if (isStart == 4) {
-			drawpoint(2617.6815470655, -3651.0076391436, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 2617.6815470655;
-			event.point.y = -3651.0076391436;
-
-		}
-
-		if (isStart == 5) {
-			drawpoint(2662.8634012287, -3640.9428141391, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 2662.8634012287;
-			event.point.y = -3640.9428141391;
-
-		}
-
-		if (isStart == 6) {
-			drawpoint(2675.3255448185, -3586.5012607056, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 2675.3255448185;
-			event.point.y = -3586.5012607056;
-
-		}
-		if (isStart == 7) {
-			drawpoint(2813.8861908202, -3559.9667220575, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 2813.8861908202;
-			event.point.y = -3559.9667220575;
-		}
-		if (isStart == 8) {
-			drawpoint(3509.4434024117, -3217.7626719047, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 3509.4434024117;
-			event.point.y = -3217.7626719047;
-		}
-		if (isStart == 9) {
-			drawpoint(3583.9047474971, -3127.1792468642, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 3583.9047474971;
-			event.point.y = -3127.1792468642;
-		}
-		if (isStart == 10) {
-			drawpoint(3658.4165071066, -3109.7945491291, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 3658.4165071066;
-			event.point.y = -3109.7945491291;
-		}
-		if (isStart == 11) {
-			drawpoint(4059.2389829366, -3182.078292343, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 4059.2389829366;
-			event.point.y = -3182.078292343;
-		}
-		if (isStart == 12) {
-			drawpoint(4080.1827879887, -3144.1064525533, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 4080.1827879887;
-			event.point.y = -3144.1064525533;
-		}
-		if (isStart == 13) {
-			drawpoint(4113.5473514156, -3138.6165480046, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 4113.5473514156;
-			event.point.y = -3138.6165480046;
-		}
-		if (isStart == 14) {
-			drawpoint(4148.0059837576, -3156.6874838085, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 4148.0059837576;
-			event.point.y = -3156.6874838085;
-		}
-		//12
-		if (isStart == 15) {
-			drawpoint(4158.3951165156, -3152.2126397374, "dingWeiDian.png",
-					isDingWeiDian);
-			event.point.x = 4158.3951165156;
-			event.point.y = -3152.2126397374;
-		}
-
-		//drawpoint(2607.8522400652, -3682.5745902937, "dingWeiDian.png",isDingWeiDian);
-
-		map.setCenter(new SuperMap.LonLat(event.point.x, event.point.y), 4);
-		var hint_Text = getHint_Text(event, j);
-		$("#hint_p").text(hint_Text);
-
-		if (hint_Text == "您已到达终点") {
-			if (locationName == "开始入学导航" && stepNumber < 4) {
-				confirm();
-			}
-
-		}
-	}
-
-	function getGeolocationFailed(event) {
-		alert("您当前使用的浏览器不支持地图定位服务");
-	}
-	//计算两点间的距离
-	function getDistance(a, b) {
-		var z = (a.x - b.x) * (a.x - b.x) + (a.y - b.y) * (a.y - b.y);
-		var dis = Math.sqrt(z);
-		return dis;
-	}
-
-	// p点到(a,b)点两所在直线的垂点坐标
-	function getFoot(a, b, p) {
-		var fa = b.y - a.y;
-		var fb = a.x - b.x;
-		var fc = a.y * b.x - a.x * b.y;
-		var foot = new SuperMap.Geometry.Point(0, 0);
-		foot.x = 13;
-		var jd = (fb * fb * p.x - fa * fb * p.y - fa * fc)
-				/ (fa * fa + fb * fb);
-		foot.x = (fb * fb * p.x - fa * fb * p.y - fa * fc)
-				/ (fa * fa + fb * fb);
-		foot.y = (fa * fa * p.y - fa * fb * p.x - fb * fc)
-				/ (fa * fa + fb * fb);
-		return foot;
-	}
-
-	//判断p点是否在(a,b)两点所在直线上
-	function dotIsOnLine(a, b, foot) {
-		return Math.min(a.x, b.x) <= foot.x && foot.x <= Math.max(a.x, b.x)
-				&& Math.min(a.y, b.y) <= foot.y && foot.y <= Math.max(a.y, b.y);
-	}
-
-	function getHint_Text(event, k) {
-		var pathGuideItems = resul.pathList[0].pathGuideItems;
-		var hint_Text;
-		for (var i = k; i < pathGuideItems.length; i++) {
-			if (pathGuideItems[i].geometry.CLASS_NAME == "SuperMap.Geometry.Point") {
-				var disQian = getDistance(event.point,
-						pathGuideItems[i].geometry);
-				var disZhong = getDistance(event.point,
-						pathGuideItems[i + 2].geometry);
-				//判断是否在当前线段内
-				//当前线段
-				var foot2 = getFoot(pathGuideItems[i].geometry,
-						pathGuideItems[i + 2].geometry, event.point);
-				var dis2 = getDistance(event.point, foot2);
-				var dotIsOnLine2 = dotIsOnLine(pathGuideItems[i].geometry,
-						pathGuideItems[i + 2].geometry, foot2);
-				//当下一条线段为最后一条线段不能计算
-				if (i < pathGuideItems.length - 3) {
-					var foot3 = getFoot(pathGuideItems[i + 2].geometry,
-							pathGuideItems[i + 4].geometry, event.point);
-					var dis3 = getDistance(event.point, foot3);
-					var dotIsOnLine3 = dotIsOnLine(
-							pathGuideItems[i + 2].geometry,
-							pathGuideItems[i + 4].geometry, foot3);
-				}
-
-				//当前线段为最后一条线段
-				if (i == pathGuideItems.length - 3) {
-					//在当前线段内
-					if (dotIsOnLine2 == true) {
-						hint_Text = getText(i, dis2, disZhong, pathGuideItems);
-						j = i;
-						return hint_Text;
-					}
-
-					if (dotIsOnLine2 == false) {
-						var dismin_2 = Math.min(disQian, disZhong);
-						//在上一条线段内
-						if (dismin_2 == disQian) {
-							i = i - 3;
-							continue;
-						}
-						//走过了终点
-						if (dismin_2 == disZhong) {
-							hint_Text = "您已走过了终点";
-							j = i;
-							return hint_Text;
-						}
-					}
-				}
-
-				//在当前线段内
-				if (dotIsOnLine2 == true && dotIsOnLine3 == false) {
-					hint_Text = getText(i, dis2, disZhong, pathGuideItems);
-					j = i;
-					return hint_Text;
-				}
-
-				//在下一条线段内
-				if (dotIsOnLine2 == false && dotIsOnLine3 == true) {
-					i = i + 1;
-					continue;
-				}
-
-				if (dotIsOnLine2 == true && dotIsOnLine3 == true) {
-					//在下一条线段内
-					if (dis2 > dis3) {
-						i = i + 1;
-						continue;
-					}
-					//在当前线段内
-					if (dis2 <= dis3) {
-						hint_Text = getText(i, dis2, disZhong, pathGuideItems);
-						j = i;
-						return hint_Text;
-					}
-				}
-
-				if (dotIsOnLine2 == false && dotIsOnLine3 == false) {
-					var disHou = getDistance(event.point,
-							pathGuideItems[i + 4].geometry);
-					var dismin = Math.min(disQian, disZhong, disHou);
-					//在上一条线段内
-					if (dismin == disQian) {
-						if (i > 0) {
-							i = i - 3;
-							continue;
-						}
-						//当前线段为第一条线段
-						if (i = 0) {
-							hint_Text = "您走错了方向";
-							j = o;
-							return hint_Text;
-						}
-					}
-					//在下一条线段内
-					if (dismin == disHou) {
-						i = i + 1;
-						continue;
-					}
-					//在当前线段内
-					if (dismin == disZhong) {
-						hint_Text = getText(i, dis2, disZhong, pathGuideItems);
-						j = i;
-						return hint_Text;
-					}
-				}
-
-			}
-
-		}
-	}
-
-	//已判断为在当前线段内，分析得到提示
-	function getText(i, dis2, disZhong, pathGuideItems) {
-		var hint_Text;
-
-		//在当前线段内，判断是否偏离路径
-		if (dis2 > 40) {
-			hint_Text = "偏离路径";
-			return hint_Text;
-		}
-
-		//判断是否到达终点
-		if (i == pathGuideItems.length - 3 && disZhong < 20) {
-			hint_Text = "您已到达终点";
-			return hint_Text;
-		}
-
-		//在当前线段内，返回hint_Text
-		if (pathGuideItems[i + 1].length > 50) {
-
-			if (disZhong > 50) {
-				hint_Text = pathGuideItems[i + 1].description;
-				return hint_Text;
-			} else {
-				hint_Text = "50米后路口" + pathGuideItems[i + 2].description;
-				return hint_Text;
-			}
-		} else {
-			hint_Text = pathGuideItems[i + 1].description
-					+ pathGuideItems[i + 2].description;
-			return hint_Text;
-		}
-
-	}
-
-	function drawpoint(x, y, tubiao, isDingWeiDian) {
-		if (isDingWeiDian) {
-			markerLayer.removeMarker(marker);
-		}
-		var point = new SuperMap.Geometry.Point(x, y);
-		var size = new SuperMap.Size(44, 44), offset = new SuperMap.Pixel(
-				-(size.w / 2), -size.h), tubiaoPath = "theme/images/" + tubiao;
-		icon = new SuperMap.Icon(tubiaoPath, size, offset);
-
-		marker = new SuperMap.Marker(new SuperMap.LonLat(x, y), icon);
-		markerLayer.addMarker(marker);
-
-		nodeArray.push(point);
-	}
-	
-	 function getLoc(stepN) {
- 		$.ajax({
- 			url : global_path + 'student/student_getLocByStep.action',
- 			type : "post",
- 			dataType : 'json',
- 			data : 'student.step='+ stepN,
- 			success : function(data) {
-				if (null != data && data != "") {
-					xloc = data.locX;
-					yloc = data.locY;
-				}
-			},
-			error : function(result) {
-			}
- 			
- 		});
-      }
-
-	//function drawElements() {
-	//    drawpoint(2599.3728359303, -3700.8742721205);
-	//    drawpoint(4158.5057275359, -3151.8838173298);
-
-	//}
 </script>
 
 
